--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "echarts": "^5.0.2",
+    "ghpages": "0.0.10",
     "mobx": "^6.1.8",
     "mobx-angular": "^4.3.0",
     "ngx-echarts": "^6.0.1",
